# solana-sixty-days

assert_and_custom_error/: Anchor.toml
assert_and_custom_error/programs/assert_and_custom_error/: Cargo.toml
assert_and_custom_error/programs/assert_and_custom_error/src/: lib.rs
assert_and_custom_error/tests/: assert_and_custom_error.ts
basic-rust/: Anchor.toml
basic-rust/tests/: basic-rust.ts
batch/: Anchor.toml
batch/programs/batch/: Cargo.toml
batch/tests/: batch.ts
close/: Anchor.toml
close/tests/: close.ts
cpi/: Anchor.toml
cpi/tests/: cpi.ts
day1/: Anchor.toml
day2/: Anchor.toml  Cargo.toml
day2/tests/: day2.ts
event/: Anchor.toml
event/tests/: event.ts
init_if_needed/: Anchor.toml
init_if_needed/tests/: init_if_needed.ts
macro-demo/: Cargo.toml
macro-demo/src/: lib.rs  main.rs
only-owner/: Anchor.toml
only-owner/tests/: only-owner.ts
program-deploy/: Anchor.toml
program-deploy/tests/: program-deploy.ts
read_data_from_other_program_account/: Anchor.toml
read_data_from_other_program_account/tests/: read_data_from_other_program_account.ts
reinit/: Anchor.toml
reinit/tests/: reinit.ts
sol_spitter/: Anchor.toml
sol_spitter/tests/: sol_spitter.ts
sysvar/: Anchor.toml
sysvar/tests/: sysvar.ts
transfer_acc_ownership_in_program/: Anchor.toml
transfer_acc_ownership_in_program/tests/: transfer_acc_ownership_in_program.ts
transfer_sol_out_of_pda/: Anchor.toml
transfer_sol_out_of_pda/tests/: transfer_sol_out_of_pda.ts
transfer_sol_to_pda/: Anchor.toml
transfer_sol_to_pda/tests/: transfer_sol_to_pda.ts
(+31 files in other folders)
